# pressured

./: .cppcheck  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.debian  Dockerfile.valgrind  Makefile  README.md  config.example.json  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
charts/pressured/: Chart.yaml  values.schema.json  values.yaml
charts/pressured/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  lua-configmap.yaml  pdb.yaml  pvc.yaml  rbac.yaml  serviceaccount.yaml
examples/demo-app/: Dockerfile  k8s-deployment.yaml  stress.py
examples/go-pprof-app/: Dockerfile  go.mod  go.sum  main.go
examples/lua-scripts/: pprof_dump.lua  slack_notify.lua
include/: log.h  plugin.h  plugin_manager.h  pressured.h  service_registry.h  storage.h
plugins/lua/: binding_http.c  binding_log.c  binding_storage.c  bindings.h  lua_plugin.c  test_lua_http.c  test_lua_multi.c  test_lua_storage.c
plugins/pprof/: pprof.h  pprof_plugin.c  test_pprof.c
plugins/storage/: crypto.h  crypto_mbedtls.c  crypto_openssl.c  local_storage.c  s3_storage.c  s3_storage.h  sigv4.c  sigv4.h  test_large_upload.c  test_real_aws.c  test_s3_storage.c  test_sigv4.c  test_storage.c  test_streaming_upload.c
scripts/: valgrind-test.sh
src/: cgroup.c  config.c  event.c  event_generator.c  http.c  http.h  internal.h  kubelet.c  log.c  main.c  plugin.c  service_registry.c  test_cgroup.c  test_http.c  test_http_e2e.c  test_http_stream_storage.c  test_plugin.c  test_service_registry.c
